# pretraining-playground

./: .gitignore  .gitmodules  README.md  checkpoint_metric_computation.py  checkpoint_metric_evaluation.py  checkpoint_metric_extractor.py  demo.ipynb  download_sample.py  evaluation_demo.ipynb  memory_demo.ipynb  metric_computation.py  model_metric_extractor.py  pile_dataset_processing.ipynb  pyproject.toml  subnetwork_analysis.py
computed_statistics/1.4b/: cka_scores_per_layer.pkl  grad_sim_per_layer.pkl  grad_weight_magnitudes_per_layer.pkl  weight_magnitudes_per_layer.pkl
computed_statistics/160m/: cka_scores_per_layer.pkl  grad_sim_per_layer.pkl  grad_weight_magnitudes_per_layer.pkl  weight_magnitudes_per_layer.pkl
computed_statistics/2.8b/: cka_scores_per_layer.pkl  grad_sim_per_layer.pkl  grad_weight_magnitudes_per_layer.pkl  weight_magnitudes_per_layer.pkl
dataset/: pythia-training-metrics.py  pythia_training_metrics.py
lib/: cka.py
notebooks/: analyis__metric_vs_eval.ipynb  analysis__eval_plots.ipynb  analysis__eval_prediction.ipynb  analysis__metric_plots.ipynb  analysis__metric_plots_pietro-pythia-14m-2-qk-layernorm.ipynb  analysis__metric_plots_pietro-pythia-14m-2.ipynb  analysis__metric_plots_pietro-pythia-40m_base.ipynb  analysis__metric_plots_pietro.ipynb  analysis__metric_similarity.ipynb  analysis__metric_vs_eval.ipynb  analysis__svd.ipynb  utils.py  utils_40m_base.py  wip__eval_computation.ipynb  wip__svd.ipynb
scripts/: launch_slurm_metric_computation.wilkes3  launch_slurm_metric_extractor.wilkes3
(+9 files in other folders)
